Show-All-Matches

--- a/S09P01-Image-Selection-Mode/.local/ProjectSettings.json
+++ b/S09P01-Image-Selection-Mode/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[{\"DocumentPath\":\"Main.xaml\",\"FactoryId\":\"{ACB8E7BA-F093-44C1-9B50-33ECA51AAE16}\"}]","ProjectBreakpoints":"{\"Value\":{},\"CodeBreakpoints\":{}}","ProjectWatches":"{\"Value\":[]}"}
