Retrieving-and-Organizing-Emails

--- a/S13P08-Sending-a-Calendar-invite-with-Outlook/.local/ProjectSettings.json
+++ b/S13P08-Sending-a-Calendar-invite-with-Outlook/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"IMAP retrieve mail messages.xaml\",\"Filtering email IMAP and Outlook.xaml\",\"Sending meeting invite via Integration with Outlook.xaml\",\"Sending emails via Outlook.xaml\",\"Sending Emails via SMTP.xaml\"]"}
+{"ProjectBreakpoints":"{\"Value\":{},\"CodeBreakpoints\":{}}","ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[{\"DocumentPath\":\"IMAP retrieve mail messages.xaml\",\"FactoryId\":\"{ACB8E7BA-F093-44C1-9B50-33ECA51AAE16}\"}]"}
